--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,6 +1,35 @@
-.git-icons {
-
-}
-.TNDR-name {
+.footer {
+  font-size: 20px;
+  box-shadow: 0px 0px 3px 2px #6AA6A3;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 80px;
+  margin-top: 40px;
   
+}
+
+.git-icons {
+  display: flex;
+  justify-content: center;
+  margin: auto
+}
+
+.github-img {
+  width: 30px;
+  font-size: 12px;
+}
+
+.TNDR-name {
+font-size: 12px;
+text-align: center;
+font-family: 'Catamaran', sans-serif;
+font-weight: 100;
+}
+
+.team-name {
+  font-size: 14px;
+  font-family: 'Catamaran', sans-serif;
+  font-weight: 600;
 }
