--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -2,29 +2,38 @@
   font-size: 20px;
   box-shadow: 0px 0px 3px 2px #6AA6A3;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   padding: 20px;
-  margin-bottom: 40px;
 }
+
 .logo {
   font-family: 'Poiret One', cursive;
   font-size: 48px;
   text-decoration: none !important;
   color: black;
-  margin: auto;
-  padding-left:100px
+  margin-left: 40%;
 }
-.links {
-  justify-content: space-between;
 
+.links {
+  display: flex;
+  margin-left: auto;
+  padding-right: 30px;
 }
-.link {
-  text-decoration: none !important;
+
+.link, .link-welcome {
+  text-decoration: none;
   color: black;
   padding-right: 20px ;
   font-family: 'Catamaran', sans-serif;
   font-weight: 100;
   font-size: 18px;
+}
 
+.link-welcome {
+  padding-right: 60px;
+}
+
+.link-welcome:hover {
+  text-decoration: underline;
+  text-decoration-color: #6AA6A3;
 }
