--- a/client/src/screens/Home/Home.css
+++ b/client/src/screens/Home/Home.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 10px;
-  font-family: Catamaran, sans-serif;
+  font-family: "Catamaran", sans-serif;
 }
 .hero-image {
   width: 70%;
@@ -18,7 +18,7 @@
   font-weight: normal;
 }
 .step-numbers {
-  font-family: Poiret One, sans serif;
+  font-family: "Poiret One", sans-serif;
   font-size: 65px;
   color: #6aa6a3;
   margin-right: 35px;
