--- a/client/src/screens/SignUp/SignUp.css
+++ b/client/src/screens/SignUp/SignUp.css
@@ -3,7 +3,7 @@
   width: 70%;
   align-items: center;
   margin: 125px auto;
-  font-family: Catamaran, sans-serif;
+  font-family: "Catamaran", sans-serif;
 }
 .left-column {
   display: flex;
