--- a/client/src/components/Item/Item.css
+++ b/client/src/components/Item/Item.css
@@ -3,17 +3,18 @@
   flex-direction: column;
   align-items: center;
   margin: 10px;
-  box-shadow: 0px 0px 3px 1px #CECECE;
+  box-shadow: 0px 0px 3px 1px #cecece;
   transition: 250ms all;
   padding: 10px;
   margin-bottom: 20px;
   border-radius: 30px;
   text-decoration: none !important;
+  justify-content: space-between;
 }
 
 .item:hover {
   transform: scale(1.02);
-  opacity: .9;
+  opacity: 0.9;
 }
 
 .item-image {
@@ -25,19 +26,25 @@
   padding: 10px;
   color: black;
   text-transform: capitalize;
-  font-family: 'Catamaran', sans-serif;
+  font-family: "Catamaran", sans-serif;
   font-weight: 100;
   text-align: center;
 }
 
 @media (max-width: 500px) {
   .item {
-      width: 100%;
-      margin-bottom: 20px;
+    width: 100%;
+    margin-bottom: 20px;
+    margin: 10px;
+    justify-content: space-between;
   }
   .item-image {
-      width: 180px;
-      margin: 15px;
-      padding: 10px;
+    width: 100%;
+    margin: 0px;
+    padding: 5px;
   }
+  .item-name {
+    font-size: 10px;
+    padding: 0px;
+}
 }
