--- a/client/src/components/ItemCards/ItemCards.css
+++ b/client/src/components/ItemCards/ItemCards.css
@@ -1,26 +1,26 @@
 .item-cards {
   width: 70%;
-  padding: 50px;
   margin: auto;
   margin-top: 40px;
 }
 
 .cards {
-  display: grid;
   display: flex;
   flex-wrap: wrap;
-  /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
   justify-content: center;
   margin: auto;
 }
 
 @media (max-width: 500px) {
   .item-cards {
-      width: 90vw;
-      padding: 20px;
-      margin: 0px;
+    width: 90vw;
+    padding: 0px;
+    margin-top: 20px;
   }
   .cards {
-      margin: 0 -20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(8ch, auto));
+    column-gap: 1rem;
+    margin-right: 20px;
   }
 }
