--- a/client/src/screens/ItemEdit/ItemEdit.css
+++ b/client/src/screens/ItemEdit/ItemEdit.css
@@ -1,94 +1,88 @@
-.edit-item {
+.item-edit {
   border: 1px solid red;
-  display: flex;
-  flex-direction: row;
-  align-items: stretch;
+  width: 70%;
+  max-height: 62vh;
+  margin: 2% 20% 2% 15%;
+  grid-template-columns: repeat(2, 1fr);
   justify-content: center;
-  width: 75%;
+  display: grid;
+  align-content: space-around;
+}
+.image-container-edit {
+  border: 1px solid pink;
+  margin-left: 10%;
+  margin-top: 4%;
+}
+.item-image-edit {
+  border: 1px solid rebeccapurple;
+  width: 290px;
+  margin-top: 17%;
+  /* margin-right: 0px; */
+}
+.item-container-edit {
+  display: grid;
+  max-width: 30vw;
+  grid-template-columns: 1fr 2fr;
+}
+.name-container-edit,
+.category-container-edit,
+.season-container-edit,
+.color-container-edit,
+.image-container-edit {
+  min-height: 5vh;
+  margin-left: 10%;
+}
+.name-edit,
+.category-edit,
+.season-edit,
+.color-edit,
+.image-edit,
+.notes-edit {
+  font-weight: 600;
+}
+.name-input-edit,
+.category-input-edit,
+.season-input-edit,
+.color-input-edit,
+.image-link-edit {
+  font-family: Catamaran;
+  width: 20vw;
+}
+.notes-container-edit {
+  min-width: 290px;
+}
+.textarea-edit-notes {
+  height: 90%;
+  word-wrap: break-word;
+  inline-size: 170px;
+  overflow-wrap: break-word;
+}
+.buttons-edit {
+  grid-column: span 2 / auto;
   margin: auto;
 }
-.edit-image-container {
-  border: 1px solid pink;
-  display: flex;
-  margin: 50px 20px 50px 0px;
-  align-self: flex-start;
-  justify-self: right;
-  flex-grow: .75;
+.save-button-edit,
+.delete-button-edit {
+  padding: 10px;
+  display: inline-block;
+  color: white;
+  background-color: black;
+  margin: 0;
+  border-radius: 15px;
+  text-align: center;
+  margin-top: 22%;
+  font-size: 12px;
+  padding: 0.4rem 67px;
 }
-.edit-item-image {
-  border: 1px solid rebeccapurple;
-  width: 300px;
+.button-container a:visited,
+.button-container a:hover,
+.button-container a,
+.button-container a:active {
+  text-decoration: none;
+  color: white;
 }
-.edit-item-container {
-  border: 1px solid palevioletred;
-  display: flex;
-  flex-direction: column;
-  justify-content: stretch;
-  margin: 50px 0px 50px 20px;
-  flex-grow: 1.5;
-  justify-content: space-between;
-}
-.edit-form {
-  border: 1px solid sandybrown;
-}
-.edit-label-image-link {
-  border: 1px solid navy;
-}
-.edit-input-image-link {
-  border: 1px solid royalblue;
-}
-.edit-label-name {
-  border: 1px solid palegreen;
-  padding: 5px 10px 5px 0px;
-  /* margin: 5px; */
-}
-.edit-input-name {
-  border: 1px solid aqua;
-}
-.edit-label-category {
-  border: 1px solid palegreen;
-  padding: 5px 10px 5px 0px;
-  /* margin: 5px; */
-}
-.edit-input-category {
-  border: 1px solid chartreuse;
-  font-family: Catamaran;
-}
-.edit-label-season {
-  border: 1px solid palegreen;
-  padding: 5px 10px 5px 0px;
-  /* margin: 5px; */
-}
-.edit-input-season {
-  border: 1px solid indigo;
-}
-.edit-label-color {
-  border: 1px solid tomato;
-  flex: 1 0 190px;
-  max-width: 200px;
-}
-.edit-input-color {
-border: 1px solid coral;
-}
-.edit-label-notes {
-  padding: 5px 10px 5px 0px;
-}
-.edit-textarea-notes {
-  border: 1px solid hotpink;
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-}
-.edit-buttons {
-  border: 1px solid thistle;
-}
-.label {
-  padding: 5px 10px 5px 0px;
-  align-self: flex-start;
-  width: 3em;
-}
-@media  and (max-width: 550px) {
+/* @media  and (max-width: 550px) {
   display: flex;
   flex-direction: column;
   margin: auto;  
-}
+} */
