--- a/client/src/components/Item/Item.css
+++ b/client/src/components/Item/Item.css
@@ -1,4 +1,4 @@
-.item {
+.item-component {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,7 +12,7 @@
   justify-content: space-between;
 }
 
-.item:hover {
+.item-component:hover {
   transform: scale(1.02);
   opacity: 0.9;
 }
@@ -32,7 +32,7 @@
 }
 
 @media (max-width: 500px) {
-  .item {
+  .item-component {
     width: 100%;
     margin-bottom: 20px;
     margin: 10px;
