--- a/client/src/components/ItemCards/ItemCards.css
+++ b/client/src/components/ItemCards/ItemCards.css
@@ -4,7 +4,7 @@
   margin-top: 40px;
 }
 
-.cards {
+.index-cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -17,7 +17,7 @@
     padding: 0px;
     margin-top: 20px;
   }
-  .cards {
+  .index-cards {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(8ch, auto));
     column-gap: 1rem;
