--- a/client/src/screens/Home/Home.css
+++ b/client/src/screens/Home/Home.css
@@ -20,13 +20,14 @@
 }
 .step-numbers {
   font-family: "Poiret One", sans serif;
-  font-size: 65px;
+  font-size: 50px;
   color: #6aa6a3;
   margin-right: 35px;
 }
 .step-icon {
   box-shadow: 3px 3px 8px grey;
-  border-radius: 130px;
+  border-radius: 150px;
+  width: 150px;
 }
 .number-and-icon {
   display: flex;
@@ -34,7 +35,8 @@
   align-items: center;
 }
 .heading-and-description {
-  width: 100%;
+  width: 85%;
+  margin-top: 20px;
 }
 .step-headings {
   font-size: 26px;
@@ -63,7 +65,7 @@
   border-radius: 24px;
   padding: 10px;
   width: 250px;
-  margin: 50px 0 30px;
+  margin: 40px 0;
   box-shadow: 3px 3px 8px grey;
 }
 .marketing-container {
@@ -77,8 +79,8 @@
   align-items: center;
 }
 .why-description {
-  font-size: 22px;
-  margin-left: 36px;
+  font-size: 20px;
+  margin: 1% 0 1% 3%;
 }
 .citations {
   text-decoration: none;
@@ -88,6 +90,7 @@
 .slogan {
   font-family: "Poiret One";
   font-size: 44px;
+  font-weight: bolder;
   margin: 40px;
   color: #6aa6a3;
   text-shadow: 2px 3px 2px lightgrey;
@@ -96,11 +99,17 @@
 .final-sell {
   text-align: center;
   font-size: 22px;
-  letter-spacing: 2px;
+  margin: 10px 0;
 }
 .final-ask {
   text-align: center;
   font-size: 22px;
+  margin: 30px 0;
+}
+.save-text {
+  text-align: center;
+  font-size: 22px;
+  font-weight: bold;
 }
 .encapsulated-button {
   background-color: black;
@@ -111,7 +120,7 @@
   border-radius: 24px;
   padding: 10px;
   width: 375px;
-  margin: 50px 0;
+  margin: 30px 0;
   box-shadow: 3px 3px 8px grey;
 }
 
