--- a/client/src/screens/Home/Home.css
+++ b/client/src/screens/Home/Home.css
@@ -8,6 +8,7 @@
 .hero-image {
   width: 70%;
   box-shadow: 3px 3px 8px grey;
+  border-radius: 10px;
 }
 .instructions-container {
   display: flex;
@@ -80,7 +81,7 @@
 }
 .why-description {
   font-size: 20px;
-  margin: 1% 0 1% 3%;
+  margin: 1% 1% 1% 3%;
 }
 .citations {
   text-decoration: none;
@@ -91,7 +92,7 @@
   font-family: "Poiret One";
   font-size: 44px;
   font-weight: bolder;
-  margin: 40px;
+  margin: 30px 0 40px;
   color: #6aa6a3;
   text-shadow: 2px 3px 2px lightgrey;
   text-align: center;
