--- a/client/src/screens/SignUp/SignUp.css
+++ b/client/src/screens/SignUp/SignUp.css
@@ -2,7 +2,7 @@
   display: flex;
   width: 70%;
   align-items: center;
-  margin: 125px auto;
+  margin: 100px auto;
   font-family: "Catamaran", sans-serif;
 }
 .left-column {
@@ -19,10 +19,12 @@
   align-self: center;
 }
 .signup-headline {
-  text-shadow: 2px 2px 1px lightgrey;
+  font-size: 30px;
+  margin: 24px 0;
 }
 .signup-caption {
-  margin: 0;
+  margin: 0px 50px;
+  font-size: 22px;
 }
 .right-column {
   display: flex;
@@ -34,25 +36,25 @@
   flex-direction: column;
   margin: 0 auto;
   justify-content: space-evenly;
-  width: 70%;
+  width: 65%;
 }
 .signup-labels {
-  font-size: 20px;
+  font-size: 16px;
 }
 .signup-input {
   height: 26px;
   border: 1px solid lightgrey;
-  margin-bottom: 16px;
+  margin-bottom: 14px;
 }
 .signup-button {
   background-color: black;
   color: white;
   font-family: "Catamaran";
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 600;
   border-radius: 24px;
   width: 90%;
-  margin: 24px;
+  margin: 24px 24px 5px;
   box-shadow: 3px 3px 8px grey;
   align-self: center;
   cursor: pointer;
