--- a/client/src/screens/ItemDetail/ItemDetail.css
+++ b/client/src/screens/ItemDetail/ItemDetail.css
@@ -3,8 +3,8 @@
 }
 .item-detail-image {
   width: 290px;
-  margin-left: 10%;
-  margin-top: 4%;
+  margin-left: 15%;
+  margin-top: 13%;
 }
 
 .detail {
@@ -12,10 +12,14 @@
   margin-top: 17%;
 }
 
+.detail-no-button {
+  margin-left: 11%;
+}
+
 .item-detail {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  margin: 2% 20% 2% 15%;
+  margin: 0% 20% 0% 15%;
   max-height: 62vh;
   align-content: space-around;
   width: 70%;
@@ -82,6 +86,7 @@
 }
 
 .name,
-.color {
+.color,
+.category {
   text-transform: capitalize;
 }
