--- a/client/src/screens/Home/Home.css
+++ b/client/src/screens/Home/Home.css
@@ -127,19 +127,79 @@
 
 @media (max-width: 500px) {
   .hero-image {
-    box-shadow: 3px 3px 8px grey;
+    width: 90%;
   }
   .digitize-text {
     font-size: 18px;
     text-align: center;
-    margin: 30px;
+    margin: 40px 0 10px;
   }
   .instructions-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 80%;
+  }
+  .step-1,
+  .step-2,
+  .step-3 {
+    flex-direction: row;
+    justify-content: center;
+    width: auto;
+    margin: 20px 0;
+  }
+  .number-and-icon {
+    flex-direction: column;
+    margin-right: 18px;
+  }
+  .step-numbers {
+    margin: 0;
+    font-size: 42px;
+    margin-bottom: 6px;
+  }
+  .heading-and-description {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    width: auto;
   }
   .step-icon {
     width: 100px;
+  }
+  .step-headings {
+    font-size: 22px;
+    margin-bottom: auto;
+  }
+  .step-descriptions {
+    font-size: 18px;
+    margin: 10px 0 0;
+  }
+  .start-button {
+    font-size: 20px;
+    width: 150px;
+    margin: 24px 0;
+  }
+  .why-section {
+    flex-direction: column;
+  }
+  .why-img {
+    width: 200px;
+  }
+  .why-description {
+    font-size: 18px;
+    margin-top: 18px;
+  }
+  .final-sell,
+  .final-ask,
+  .save-text {
+    font-size: 18px;
+  }
+  .slogan {
+    font-size: 36px;
+    margin: 40px 0;
+  }
+  .encapsulated-button {
+    font-size: 20px;
+    width: 250px;
   }
 }
