--- a/client/src/screens/ItemDetail/ItemDetail.css
+++ b/client/src/screens/ItemDetail/ItemDetail.css
@@ -1,6 +1,3 @@
-.push-detail {
-  height: 4vw;
-}
 .item-detail-image {
   width: 290px;
   margin-left: 15%;
@@ -19,7 +16,7 @@
 .item-detail {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  margin: 0% 20% 0% 15%;
+  margin: 0% 20% 5% 15%;
   max-height: 62vh;
   align-content: space-around;
   width: 70%;
@@ -33,6 +30,7 @@
 .notes-div,
 .notes-div {
   font-weight: 600;
+  display: flex;
 }
 
 .edit-button,
@@ -45,12 +43,19 @@
   border-radius: 15px;
   text-align: center;
   margin-top: 22%;
+  box-shadow: 3px 3px 8px grey;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 14px;
 }
 
 .edit-button {
-  border: none;
-  padding: 0.4rem 67px;
-  font-size: 12px;
+  padding: 0.2rem 67px;
+}
+
+.delete-button {
+  padding: 0.2rem 60px;
+  margin-left: 12%;
 }
 
 .button-container a:visited,
@@ -59,13 +64,6 @@
 .button-container a:active {
   text-decoration: none;
   color: white;
-}
-
-.delete-button {
-  border: none;
-  padding: 0.4rem 60px;
-  margin-left: 12%;
-  font-size: 12px;
 }
 
 .name-container,
@@ -89,4 +87,50 @@
 .color,
 .category {
   text-transform: capitalize;
+}
+
+@media (max-width: 500px) {
+  .item-detail-image {
+    width: 170px;
+    margin-left: 25%;
+    margin-top: 0%;
+  }
+
+  .detail {
+    margin-left: 0;
+    margin-top: 3%;
+    width: 100%;
+  }
+
+  .item-detail {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+    min-height: 74vh;
+    justify-content: center;
+    align-content: stretch;
+  }
+
+  .name-container,
+  .category-container,
+  .season-container,
+  .color-container,
+  .notes-container {
+    display: grid;
+    min-height: 5vh;
+    max-width: 70vw;
+    margin-left: 12%;
+  }
+
+  .edit-button {
+    padding: 0.2rem 45px;
+    margin-top: 3%;
+    margin-left: 11%;
+  }
+
+  .delete-button {
+    padding: 0.2rem 40px;
+    margin-top: 3%;
+  }
 }
