--- a/client/src/screens/ItemDetail/ItemDetail.css
+++ b/client/src/screens/ItemDetail/ItemDetail.css
@@ -1,18 +1,3 @@
-.item-detail-image {
-  width: 290px;
-  margin-left: 15%;
-  margin-top: 13%;
-}
-
-.detail {
-  margin-left: 0;
-  margin-top: 17%;
-}
-
-.detail-no-button {
-  margin-left: 11%;
-}
-
 .item-detail {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -22,7 +7,18 @@
   width: 70%;
   font-family: "Catamaran", sans-serif;
 }
-
+.item-detail-image {
+  width: 290px;
+  margin-left: 15%;
+  margin-top: 13%;
+}
+.detail {
+  margin-left: 0;
+  margin-top: 17%;
+}
+.detail-no-button {
+  margin-left: 11%;
+}
 .name-div,
 .category-div,
 .season-div,
@@ -75,6 +71,7 @@
   grid-template-columns: 1fr 2fr;
   min-height: 5vh;
   max-width: 30vw;
+  border: 1px solid sienna;
 }
 
 .notes {
