--- a/client/src/screens/ItemDetail/ItemDetail.css
+++ b/client/src/screens/ItemDetail/ItemDetail.css
@@ -21,6 +21,7 @@
   align-content: space-around;
   width: 70%;
   font-family: "Catamaran", sans-serif;
+  letter-spacing: 0.05rem;
 }
 
 .name-div,
@@ -42,7 +43,7 @@
   margin: 0;
   border-radius: 15px;
   text-align: center;
-  margin-top: 22%;
+  margin-top: 8%;
   box-shadow: 3px 3px 8px grey;
   cursor: pointer;
   font-weight: 600;
@@ -79,8 +80,10 @@
 
 .notes {
   word-wrap: break-word;
-  inline-size: 170px;
+  inline-size: 180px;
   overflow-wrap: break-word;
+  height: 150px;
+  overflow: scroll;
 }
 
 .name,
@@ -92,13 +95,13 @@
 @media (max-width: 500px) {
   .item-detail-image {
     width: 170px;
-    margin-left: 25%;
+    margin-left: 28%;
     margin-top: 0%;
   }
 
   .detail {
     margin-left: 0;
-    margin-top: 3%;
+    margin-top: 8%;
     width: 100%;
   }
 
@@ -106,10 +109,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin: 0;
-    min-height: 74vh;
-    justify-content: center;
-    align-content: stretch;
+    margin: 10% 0 0 0;
+    min-height: 70vh;
   }
 
   .name-container,
@@ -123,14 +124,22 @@
     margin-left: 12%;
   }
 
+  .edit-button,
+  .delete-button {
+    margin-top: 8%;
+  }
+
   .edit-button {
-    padding: 0.2rem 45px;
-    margin-top: 3%;
-    margin-left: 11%;
+    padding: 0.2rem 50px;
+    margin-left: 10%;
   }
 
   .delete-button {
-    padding: 0.2rem 40px;
-    margin-top: 3%;
+    padding: 0.2rem 43px;
+  }
+
+  .notes {
+    height: 100px;
+    overflow: scroll;
   }
 }
