updated items/no closet screen to reflect holy grail layout, added spacing between gifs

--- a/client/src/screens/Items/Items.css
+++ b/client/src/screens/Items/Items.css
@@ -3,14 +3,14 @@
 }
 .awkward {
   font-family: "Catamaran";
-  font-size: 30px;
-  margin: 45px;
+  font-size: 22px;
+  margin: 45px 45px 45px 205px;
   font-weight: normal;
 }
 
 .no-closet {
   font-family: "Catamaran";
-  font-size: 30px;
+  font-size: 24px;
   margin: 45px;
   font-weight: normal;
   text-align: center;
@@ -20,6 +20,8 @@
 .funny-gifs {
   display: flex;
   justify-content: center;
+  margin: auto;
+  width: 70%;
 }
 
 .gif-1,
@@ -28,6 +30,7 @@
   width: 300px;
   height: auto;
   border-radius: 25px;
+  padding: 0 10px
 }
 
 .no-closet-sell {
@@ -35,7 +38,7 @@ color: #6AA6A3;
 font-family: "Poiret One";
 font-weight: bold;
 text-align: center;
-font-size: 22px;
+font-size: 30px;
 letter-spacing: 2px;
 margin: 20px;
 }
