--- a/client/src/screens/ItemCreate/ItemCreate.css
+++ b/client/src/screens/ItemCreate/ItemCreate.css
@@ -28,8 +28,7 @@
 .category-create,
 .season-create,
 .color-create,
-.image-create,
-.notes-create {
+.image-create {
   font-weight: 600;
 }
 .name-input-create,
@@ -37,19 +36,30 @@
 .season-input-create,
 .color-input-create,
 .image-link-create {
-  min-width: 10vw;
+  min-width: 15vw;
 }
 .notes-container-create {
-  min-width: 290px;
   align-items: stretch;
+  min-width: 290px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.notes-create {
+  font-weight: 600;
 }
 .textarea-notes-create {
   word-wrap: break-word;
   overflow-wrap: break-word;
+  height: 100%;
   justify-self: stretch;
 }
+.button-container-create {
+  grid-column: span 2 / auto;
+  margin: auto;
+}
 .save-button {
-  margin: 5px;
+  margin: 8px;
   color: white;
   background-color: black;
   border-radius: 15px;
@@ -57,41 +67,35 @@
   font-size: 12px;
   padding: 0.4rem 50px;
 }
-.button-container-create {
-  grid-column: span 2 / auto;
-  margin: auto;
-}
-.button-container-create a:visited,
-.button-container-create a:hover,
-.button-container-create a,
-.button-container-create a:active {
+.save-button a:visited,
+.save-button a:hover,
+.save-button a,
+.save-button a:active {
   text-decoration: none;
 }
 @media (max-width: 500px) {
-  .notes-container-create  {
-    width: 170px;
-  }
   .item-create {
-    width: 100%;
-  }
-  .item-container-create {
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin: 0;
-    justify-content: center;
-    align-content: stretch;
+    margin: 10% 0 0 0;
+    min-height: 70vh;
   }
-  .name-container,
-  .category-container,
-  .season-container,
-  .color-container {
+  .item-container-create {
+  height: 100%;
+  }
+  .name-container-create,
+  .category-container-create,
+  .season-container-create,
+  .color-container-create,
+  .notes-container-create,
+  .image-container-create {
     display: grid;
     min-height: 5vh;
     max-width: 70vw;
     margin-left: 12%;
   }
-  .button-create {
+  .button-container-create {
     padding: 0.2rem 45px;
     margin-top: 3%;
     margin-left: 11%;
