--- a/client/src/screens/ItemCreate/ItemCreate.css
+++ b/client/src/screens/ItemCreate/ItemCreate.css
@@ -4,7 +4,7 @@
   align-items: stretch;
   justify-content: center;
   max-height: 62vh;
-  margin: 4% 20% 2% 15%;
+  margin: 4% 20% 4% 15%;
 }
 .form-create {
   display: grid;
@@ -37,6 +37,14 @@
 .color-input-create,
 .image-link-create {
   min-width: 15vw;
+  width: 210px;
+  border: 1px lightgrey solid;
+  background-color: white;
+  margin-bottom: 10px;
+  min-height: 5vh;
+}
+.category-input-create{
+  color: grey;
 }
 .notes-container-create {
   align-items: stretch;
@@ -44,6 +52,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  height: 97%;
 }
 .notes-create {
   font-weight: 600;
@@ -53,6 +62,8 @@
   overflow-wrap: break-word;
   height: 100%;
   justify-self: stretch;
+  width: 75%;
+  border: 1px lightgrey solid;
 }
 .button-container-create {
   grid-column: span 2 / auto;
@@ -64,8 +75,10 @@
   background-color: black;
   border-radius: 15px;
   text-align: center;
-  font-size: 12px;
-  padding: 0.4rem 50px;
+  font-size: 14px;
+  padding: 0.2rem 64px;
+  font-family: "Catamaran", sans-serif;
+  margin-top: 24px;
 }
 .save-button a:visited,
 .save-button a:hover,
