--- a/client/src/screens/ItemEdit/ItemEdit.css
+++ b/client/src/screens/ItemEdit/ItemEdit.css
@@ -3,7 +3,7 @@
   width: 70%;
   max-height: 62vh;
   column-gap: 50px;
-  margin: 4% 20% 2% 15%;
+  margin: 4% 20% 5% 15%;
   grid-template-columns: repeat(2, 1fr);
   justify-content: center;
   align-items: stretch;
@@ -51,6 +51,13 @@
 .imageURL-input-edit {
   min-height: 5vh;
   min-width: 15vw;
+  border: 1px lightgrey solid;
+}
+.name-input-edit{
+  text-transform: capitalize;
+}
+.category-input-edit{
+  background-color: white;
 }
 .notes-container-edit {
   min-width: 290px;
@@ -60,21 +67,33 @@
   word-wrap: break-word;
   overflow-wrap: break-word;
   height: 100%;
+  border: 1px lightgrey solid;
 }
 .buttons-edit {
-  display: inline-block;
+  display: flex;
   justify-self: center;
 }
 .save-button-edit,
 .delete-button-edit {
-  margin: 5px;
+  display: inline-block;
+  padding: 10px;
   color: white;
   background-color: black;
+  margin: 0;
   border-radius: 15px;
   text-align: center;
-  font-size: 12px;
-  padding: 0.4rem 50px;
-  
+  margin-top: 8%;
+  box-shadow: 3px 3px 8px grey;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 14px;
+}
+.save-button-edit{
+  padding: 0.2rem 67px;
+}
+.delete-button-edit{
+  padding: 0.2rem 60px;
+  margin-left: 12%;
 }
 .buttons-edit a:visited,
 .buttons-edit a:hover,
