--- a/client/src/screens/ItemCreate/ItemCreate.css
+++ b/client/src/screens/ItemCreate/ItemCreate.css
@@ -91,8 +91,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin: 10% 0 0 0;
-    min-height: 70vh;
+    min-height: 67vh;
+    column-gap: 25px;
   }
   .item-container-create {
   height: 100%;
