--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -43,6 +43,7 @@ color: black;
   font-size: 14px;
   font-family: 'Catamaran', sans-serif;
   font-weight: 600;
+  margin: 0;
 }
 
 @media (max-width: 500px) {
