--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -50,12 +50,13 @@
 @media (max-width: 500px) {
   .nav {
     width: 100vw;
+    flex-direction: column;
   }
   .logo {
     font-size: 8vw;
     text-decoration: none;
     color: black;
-    margin-left: 30%;
+    margin: 0;
   }
   .links {
     margin: auto;
@@ -64,8 +65,10 @@
   .link, .link-welcome {
     font-weight: 100;
     font-size: 3vw;
+    padding: 0;
+    margin: 0 10px;
   }
   .link-welcome {
-    padding-right: 20px;
+    padding-right: 0px;
   }
 }
